--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,7 +1,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="ke.co.prosol.media_house_all">
    <application
-        android:label="media_house_all"
+        android:label="Diaspora Media Max"
         android:icon="@mipmap/ic_launcher">
         <activity
             android:name=".MainActivity"
